--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Vite + React</title>
     </head>
-    <body class="w-[90%] mx-auto my-10">
+    <body class="w-[90%] h-screen mx-auto my-10">
         <div id="root" class="w-[100%]"></div>
         <script type="module" src="/src/main.jsx"></script>
     </body>
